Fix style and change scroll bar colour

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -35,7 +35,7 @@
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: #cbeef3;
+    -fx-background-color: #ff8fa3;
     -fx-background-radius: 1em;
 }
 
